feat: add unplugin-vue-components

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Element Plus Vite Starter</title>
-    <!-- element css cdn -->
+    <!-- element css cdn, if you use custom theme, remove it. -->
     <!-- <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/element-plus/dist/index.css"
